# Robot_Roomba_ROS2

./: README.md
Docker UbuntuROS/: README.md
Docker UbuntuROS/UbuntuROS/: Dockerfile  docker-compose.yml  entrypoint.sh
Fase 01/: GUI_Roomba_Robot_v1.1.1.py  GUI_Roomba_Robot_v1.2.0.py  README.md
Fase 01/Nodo_ROS2/: Init.txt  Pasos a seguir.txt  README.md  Robot_Roomba_ROS2.code-workspace  Roomba_Ros2_Node_v0.0.0.py  Roomba_Ros2_Node_v0.0.1.py  Roomba_Ros2_Node_v0.0.2.py  Roomba_Ros2_Node_v0.0.3.py  roomba_params.yaml
Fase 02/: Communication_Node_v0.0.5.py  Communication_Node_v0.1.0.py  Pruebas_Serial.py  lib_irobot.py  lib_robot_roomba.py
Fase 02/Documentacion/: Nodo de Comunicación Serial (communication_node).docx  Nodos Robot.docx  Robot ROS2 Roomba v1.0.0.docx  📌 1. Registro de versiones de Communication_Node.docx  📘 Documento Comparativo – Librerías lib_irobot vs lib_robot_roomba.docx  📘 Documento Técnico – Nodo CommunicationNode.docx
Fase 02/Utils/: Pruebas_Serial.py  README.md  README_Simulador.md  simulador_roomba.py  test_socat.py
Fase 02/Versiones anteriores/: Communication_Node_v0.0.0.py  (+5 more)
Fase 02/ws_roomba/src/roomba_msgs/: CMakeLists.txt  package.xml
Fase 02/ws_roomba/src/roomba_msgs/msg/: Power.msg  Security.msg  State.msg
Fase 02/ws_roomba/src/roomba_msgs/srv/: Priority.srv
Fase_1/: GUI_Roomba_Robot.py.py  GUI_Roomba_Robot_v1.1.1.py  GUI_Roomba_Robot_v1.2.0.py  Pruebas_GUI.py  README.md
Fase_2/: Communication_Node_v0.0.0.py  communication_node_v1.py  communication_node_v3.py  communication_node_v4.py  communication_node_vf2.py
(+187 files in other folders)
